tests/baselines/reference/importAttributes5.errors.txt
importAttributes5.ts(1,20): error TS2792: Cannot find module './first'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
importAttributes5.ts(1,36): error TS1005: '}' expected.


==== importAttributes5.ts (2 errors) ====
    import * as f from "./first" with {
                       ~~~~~~~~~
!!! error TS2792: Cannot find module './first'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
                                       
!!! error TS1005: '}' expected.
!!! related TS1007 importAttributes5.ts:1:35: The parser expected to find a '}' to match the '{' token here.